--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ oauthlib==3.2.0
 requests==2.27.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.2
-tweepy==4.8.0
+tweepy==3.9.0
 urllib3==1.26.9
 contextualSpellCheck==0.3.0
 spacy==2.3.2
@@ -19,3 +19,7 @@ dj-static==0.0.6
 django-celery-beat==1.0.1
 djangorestframework==3.11.1
 langdetect==1.0.8
+redis==4.2.2
+gunicorn==20.1.0
+psycopg2-binary==2.8.6
+flower==0.9.0
